Fixed rules pannel making overflow to the right

--- a/src/styles/rulesPanel.css
+++ b/src/styles/rulesPanel.css
@@ -38,6 +38,7 @@
 
 .rules p {
     position: relative;
+    width: calc(100% - 15px);
     left: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; /*Dev font*/
 }
